--- a/internal/webapp/static/view.html
+++ b/internal/webapp/static/view.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="version" content="{{.Version}}">
     <title>Ratatoskr</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="/static/scripts.js"></script>
